# backend_codesfastapi

./: README.md  main.py  pyproject.toml
backend/: .env
chroma_db/: chroma.sqlite3
core/: llm_adress.py  model.py  schemas.py
core/add_rag/: rag.py
gemini_app/backend/: main.py  pyproject.toml
rag_docs/ytü/: DD-008-YTÜ Ders Kayıt Esasları 1.docx  DD-014-YTÜ Lisans Programı Açma ve Yürütme Esasları.docx  DD-015-YTÜ Mezuniyet Sınav Esasları.docx  DD-022-YTÜ Lisans Öğretimi Bitirme Çalışması İlkeleri.docx  DD-040-2.Öğretim Öğrencilerinin Yüzde On Sıralamasına İlişkin Esaslar 1.docx  DD-042-Sınav Sonuçlarına Yapılacak İtirazlar İle İlgili Esaslar.docx  DD-045-YTÜ Diploma Diploma Yerine Geçerli Belge Öğrenim Belgesi ve Mezun Yazısı Esasları.docx  DD-052-YTÜ Denklik (Lisans  Tamamlama) Programına İlişkin Esaslar.doc  DD-058-Bologna 2018 Öğretim Planına Geçişte Uygulanacak İntibak Esasları.docx  DD-118-YTÜ Lisans Mezunlarının Derece Tespitine Yönelik Usul ve Esaslar.docx  YÖ-014-YTÜ Özel Öğrenci Yönergesi.doc  YÖ-088-YTÜ İşletmede Mesleki Eğitim Yönergesi.docx  YÖ-097-YTÜ Eşdeğerlik ve İntibak İşlemleri Yönergesi.doc  YÖ-102-YTÜ Yurt Dışından Lisans Programlarına Öğrenci Kabul Yönergesi.docx  YÖ-007-YTÜ Yaz Okulu Yönergesi.doc  YÖ-015-Meslek Yüksekokulları Mezunlarının Lisans Öğrenimine Devamları Hakkında Yönerge.doc  YÖ-031-YTÜ Akademik Danışmanlık Yönergesi.docx  YÖ-064-YTÜ Önceki Öğrenmenin Tanınmasına İlişkin Yönerge (1).docx  YÖ-075-YTÜ Sınav Yönergesi.docx  YÖ-095 YTÜ Mühendislik Tamamlama Programı Esasları Yönergesi.doc  (+3 more)
routers/: story.py
(+2 files in other folders)
